[package]
name = "winrt-toast-reborn"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = [
    "Harry Cheng <chengyuhui1@gmail.com>",
    "Atif Chowdhury <iftakhar.awal@gmail.com>",
]
description = "A toast notification library for Windows 10 and 11."
keywords = ["notification", "windows", "toast", "notify"]
categories = ["os::windows-apis", "gui"]
repository = "https://github.com/AtifChy/winrt-toast.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scopeguard = "1.2"
thiserror = "2.0"
url = "2.5"

[dependencies.windows]
version = "0.61"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "UI_Notifications",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
